# imperfect

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
imperfect/: __init__.py
