[metadata]
name = imperfect
description = A CST-based config editor for configparser
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/advice-animal/imperfect/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm >= 8
    setuptools >= 65
include_package_data = true
install_requires =
    moreorless >= 0.2.0

[options.extras_require]
dev =
    black == 24.10.0
    checkdeps == 0.9.0
    flake8 == 7.1.1
    mypy == 1.13.0
    tox == 4.23.2
    ufmt == 2.8.0
    usort == 1.0.8.post1

test =
    coverage >= 6
    parameterized >= 0.6.1
    hypothesis == 6.96.1

[options.package_data]
imperfect =
    py.typed

[options.entry_points]
# console_scripts =
#     foo=foo:bar

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = imperfect/*
omit = imperfect/tests/*

[coverage:report]
fail_under = 95
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py310-minimal, py{38,39,310,311,312,313}, coverage

[testenv]
deps = .[test]
allowlist_externals = make
commands =
    make test
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}

[testenv:coverage]
deps = coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine
    coverage report
depends =
    py{38,39,310,311,312,313}

[testenv:py310-minimal]
deps = parameterized
changedir = /
commands =
    python -m imperfect.tests

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
